--- a/404.html
+++ b/404.html
@@ -13,7 +13,7 @@ permalink: /404.html
     </a>
     
     <p>
-      <a href="{{ site.data.global.url }}" class="btn btn-lg btn-default" role="button">WiRedPanda website</a>
+      <a href="{{ site.data.global.url }}" class="btn btn-lg btn-default" role="button">wiRedPanda website</a>
     </p>
 </center>
 
