--- a/public/wasm/index.html
+++ b/public/wasm/index.html
@@ -15,6 +15,7 @@ SPDX-License-Identifier: LicenseRef-Qt-Commercial OR GPL-3.0-only
     <meta name="viewport" content="width=device-width, height=device-height, user-scalable=0"/>
 
     <title>wiredpanda</title>
+<link rel="icon" type="image/x-icon" href="favicon.ico">
     <style>
       /* Make the html body cover the entire (visual) viewport with no scroll bars. */
       html, body { padding: 0; margin: 0; overflow: hidden; height: 100% }
